Decrease width of buzzwords column text to fix mobile overflow

--- a/src/Components/About/index.css
+++ b/src/Components/About/index.css
@@ -50,7 +50,7 @@
 }
 
 #Buzzwords .column .text {
-  width: 15em;
+  width: 13em;
   margin: 0.5em 0;
 }
 
